RESOLVED FIXED115522
Fix potential bug in lookup logic
https://bugs.webkit.org/show_bug.cgi?id=115522
Summary Fix potential bug in lookup logic
Oliver Hunt
Reported 2013-05-02 12:27:14 PDT
Fix potential bug in lookup logic
Attachments
Patch (2.80 KB, patch)
2013-05-02 12:32 PDT, Oliver Hunt
no flags
Patch (2.82 KB, patch)
2013-05-02 12:36 PDT, Oliver Hunt
mhahnenberg: review+
Oliver Hunt
Comment 1 2013-05-02 12:32:09 PDT
Filip Pizlo
Comment 2 2013-05-02 12:33:32 PDT
Comment on attachment 200329 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=200329&action=review > Source/JavaScriptCore/ChangeLog:12 > + in BytecodeGenerator actually limits itself to scopes that > + static. What are scopes that static?
Oliver Hunt
Comment 3 2013-05-02 12:35:18 PDT
Oliver Hunt
Comment 4 2013-05-02 12:36:38 PDT
Mark Hahnenberg
Comment 5 2013-05-02 13:56:48 PDT
Comment on attachment 200330 [details] Patch r=me
Oliver Hunt
Comment 6 2013-05-02 13:58:42 PDT
Note You need to log in before you can comment on or make changes to this bug.