Fix potential bug in lookup logic https://bugs.webkit.org/show_bug.cgi?id=115522

Reviewed by Mark Hahnenberg.

Though not a problem in practise, it is technically possible
to inject an un-proxied global object into the scope chain
via the C API.  This change makes sure that the scope walk
in BytecodeGenerator actually limits itself to scopes that
are statically bindable.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::resolve):
* runtime/JSObject.h:
(JSObject):
(JSC):
(JSC::JSObject::isStaticScopeObject):

Canonical link: https://commits.webkit.org/133967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149496 268f45cc-cd09-0410-ab3c-d52691b4dbfc